tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_input_bash_mode.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---
 Bash Mode ─────────────────────────────────────────────────
 !ls -la
────────────────────────────────────────────────────────────
