tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_input_command_hint_confirm.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---
────────────────────────────────────────────────────────────
 /confirm  [always|never|risky]
────────────────────────────────────────────────────────────
