tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_input_command_hint_hidden_when_arg_typed.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---
────────────────────────────────────────────────────────────
 /confirm al
────────────────────────────────────────────────────────────
