tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_input_command_hint_no_hint_for_parameterless.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---
────────────────────────────────────────────────────────────
 /help
────────────────────────────────────────────────────────────
