tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_input_cursor_at_start.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---
────────────────────────────────────────
 abc
────────────────────────────────────────
