tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_input_multiline.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---
────────────────────────────────────────────────────────────
 line one
 line two
 line three

────────────────────────────────────────────────────────────
