tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_input_with_text.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---
────────────────────────────────────────────────────────────
 hello world
────────────────────────────────────────────────────────────
